# myci_with_gbtolib

./: .gitignore
MyGBTOLib/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  commit.template  testLAPACKIntSize.F90
MyGBTOLib/doc/: Doxyfile  README  scatci_integrals.md
MyGBTOLib/mod/: blas_lapack_gbl.mod  bspline_base_gbl.mod  bspline_grid_gbl.mod  cgto_hgp_gbl.mod  cgto_pw_expansions_gbl.mod  coupling_obj_gbl.mod  function_integration_gbl.mod  general_quadrature_gbl.mod  integral_storage_gbl.mod  molden_const_gbl.mod  molden_gbl.mod  molecular_basis_gbl.mod  mpi_gbl.mod  mpi_memory_gbl.mod  orthogonalization_gbl.mod  parallel_arrays_gbl.mod  quadrature_module_gbl.mod  symmetry_gbl.mod  ukrmol_interface_gbl.mod  utils_gbl.mod
MyGBTOLib/source/: atomic_basis_mod.f90  basis_data_generic_mod.f90  blas_lapack.F90  bspline_base.f90  bspline_grid_mod.f90  bto_gto_integrals_mod.f90  bto_integrals_mod.f90  cgto_hgp.f90  cgto_integrals.f90  cgto_pw_expansions_mod.f90  common_obj.f90  const.f90  coupling_obj.f90  data_file.f90  eri_sph_coord.f90  free_scattering_mod.f90  function_integration.f90  general_quadrature.f90  gto_routines.f90  integral_storage_mod.f90  lebedev.f90  molden_const.f90  molden_mod.f90  molecular_basis_mod.f90  mpi_memory_mod.F90  mpi_mod.F90  orbital_routines.f90  orthogonalization.f90  parallel_arrays.f90  pco_mod.f90  phys_const.f90  precisn.F90  quadrature_module.f90  sort.f90  special_functions.f90  symmetry.f90  ukrmol_interface.f90  ukrmol_interface.working  utils.f90  wigner_cf.f90
MyGBTOLib/source/programs/: basis_read.f90  print_orbital_table.f90  read_fock_blocks.f90  scatci_integrals.f90  scatci_integrals_vp.f90
MyGBTOLib/source/temp/: bto_gto_integrals_mod.f90  bto_gto_test_routines_mod.f90  bto_integrals_mod.f90  ukrmol_routines.f90
MyGBTOLib/source/tests/: test1_atomic_basis_mod.f90  test2_atomic_basis_mod.f90  test3_atomic_molecular_basis.f90  test4_atomic_basis_mod.f90  test5_atomic_basis_mod.f90  test6_atomic_molecular_basis.f90  test8_atomic_basis_mod.f90  test9_cgto_pw_expansions_mod.f90
MyGBTOLib/source/vnl_test/: Makefile  const.f90  general_quadrature.f90  out_test_fig3_benchmark  out_test_fig4_benchmark  precisn.f90  test.f90  test_fig3.f90  test_fig4.f90  utils.f90  vnl_module.f90
MyGBTOLib/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  TestDriver.cmake  cmake_install.cmake
MyGBTOLib/tests/C1_scattering_CC/: nitrous.acid_scattering.molden
MyGBTOLib/tests/C1_scattering_SEP/: nitrous.acid_scattering2.molden
MyGBTOLib/tests/C1_target_CAS1/: nitrous.acid.molden
MyGBTOLib/tests/C1_target_CAS2/: nitrous.acid.molden
MyGBTOLib/tests/C1_target_CAS3/: nitrous.acid.molden
MyGBTOLib/tests/C1_target_HF1/: nitrous.acid.molden
MyGBTOLib/tests/C1_target_HF2/: nitrous.acid.molden
MyGBTOLib/tests/C1_target_HF3/: nitrous.acid.molden
MyGBTOLib/tests/C2_scattering_CC/: hydrogen.peroxide_scattering.molden
MyGBTOLib/tests/C2_scattering_SEP/: hydrogen.peroxide_scattering.molden
MyGBTOLib/tests/C2_target_CAS1/: hydrogen.peroxide.molden
MyGBTOLib/tests/C2_target_CAS2/: hydrogen.peroxide.molden
MyGBTOLib/tests/C2_target_CAS3/: hydrogen.peroxide.molden
MyGBTOLib/tests/C2_target_HF1/: hydrogen.peroxide.molden
MyGBTOLib/tests/C2_target_HF2/: hydrogen.peroxide.molden
MyGBTOLib/tests/C2_target_HF3/: hydrogen.peroxide.molden
MyGBTOLib/tests/C2h_scattering_CC/: trans.diazene_scattering.molden
MyGBTOLib/tests/C2h_scattering_SEP/: trans.diazene_scattering.molden
MyGBTOLib/tests/C2h_target_CAS1/: trans.diazene.molden
MyGBTOLib/tests/C2h_target_CAS2/: trans.diazene.molden
MyGBTOLib/tests/C2h_target_CAS3/: trans.diazene.molden
MyGBTOLib/tests/C2h_target_HF1/: trans.diazene.molden
MyGBTOLib/tests/C2h_target_HF2/: trans.diazene.molden
MyGBTOLib/tests/C2h_target_HF3/: trans.diazene.molden
MyGBTOLib/tests/C2v_photoionization_CC_GTO/: ch4+.molden
MyGBTOLib/tests/C2v_photoionization_CC_Mixed/: ch4+.molden
MyGBTOLib/tests/C2v_photoionization_PCCHF_A/: h2o+.molden
MyGBTOLib/tests/C2v_scattering_CC/: pyridine_scattering.molden
MyGBTOLib/tests/C2v_scattering_PCCHF_A/: h2o.molden
MyGBTOLib/tests/C2v_scattering_PCO/: pyridine.molden
MyGBTOLib/tests/C2v_scattering_SEP/: pyridine_scattering.molden
MyGBTOLib/tests/C2v_target_CAS1/: pyridine.molden
MyGBTOLib/tests/C2v_target_CAS2/: pyridine.molden
MyGBTOLib/tests/C2v_target_CAS3/: pyridine.molden
MyGBTOLib/tests/C2v_target_HF1/: pyridine.molden
MyGBTOLib/tests/C2v_target_HF2/: pyridine.molden
MyGBTOLib/tests/C2v_target_HF3/: pyridine.molden
MyGBTOLib/tests/Ci_scattering_CC/: butanen2_scattering.molden
MyGBTOLib/tests/Ci_scattering_SEP/: butanen2_scattering.molden
MyGBTOLib/tests/Ci_target_CAS1/: butanen2.molden
MyGBTOLib/tests/Ci_target_CAS2/: butanen2.molden
MyGBTOLib/tests/Ci_target_CAS3/: butanen2.molden
MyGBTOLib/tests/Ci_target_HF1/: butanen2.molden
MyGBTOLib/tests/Ci_target_HF2/: butanen2.molden
MyGBTOLib/tests/Ci_target_HF3/: butanen2.molden
MyGBTOLib/tests/Cs_scattering_CC/: uracil_lactim_scattering.molden
MyGBTOLib/tests/Cs_scattering_SEP/: uracil_lactim_scattering2.molden
MyGBTOLib/tests/Cs_target_CAS1/: uracil_lactim.molden
MyGBTOLib/tests/Cs_target_CAS2/: uracil_lactim.molden
MyGBTOLib/tests/Cs_target_CAS3/: uracil_lactim.molden
MyGBTOLib/tests/Cs_target_HF1/: uracil_lactim.molden
MyGBTOLib/tests/Cs_target_HF2/: uracil_lactim.molden
MyGBTOLib/tests/Cs_target_HF3/: uracil_lactim.molden
MyGBTOLib/tests/D2h_minimal_scattering_integrals/: h2_test.molden
MyGBTOLib/tests/D2h_photoionization_CC/: h2+.molden
MyGBTOLib/tests/D2h_photoionization_CC_atomic/: he.molden
MyGBTOLib/tests/D2h_rmt_data_CC/: h2+.molden
MyGBTOLib/tests/D2h_scattering_CC/: benzene_scattering.molden
MyGBTOLib/tests/D2h_scattering_Positron/: h2.molden
MyGBTOLib/tests/D2h_scattering_SEP/: benzene_scattering.molden
MyGBTOLib/tests/D2h_target_CAS1/: benzene.molden
MyGBTOLib/tests/D2h_target_CAS2/: benzene.molden
MyGBTOLib/tests/D2h_target_CAS3/: benzene.molden
(+4624 files in other folders)
